Closed
Bug 821454
Opened 13 years ago
Closed 13 years ago
Plug-ins float above the page and outside of their box on high-DPI displays
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: josh.tumath+bugzilla, Assigned: jfkthame)
References
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:20.0) Gecko/20121213 Firefox/20.0
Build ID: 20121213030751
Steps to reproduce:
This happened since the landing of bug 819725.
1. Set layout.css.devPixelsPerPx to -1
2. Go to the Control Panel and set the DPI to 150%
3. Go to any page on the Web with a plug-in. For example:
http://www.bbc.co.uk/news/uk-20721117
Actual results:
The plug-in is out of alignment with the page.
| Reporter | ||
Updated•13 years ago
|
Blocks: 819725
Keywords: regression
| Assignee | ||
Comment 1•13 years ago
|
||
Yes, I can reproduce the same issue with non-100% DPI on Windows 7, too.
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 2•13 years ago
|
||
AFAICT, the issue here is that the display-to-device pixel scaling from bug 819725 shouldn't be applied to child/plugin windows, because the move/resize methods for these will be called with coordinates (from their parent window) that are already in device pixels. So we only need that scaling for toplevel/dialog/popup windows, where the parameters are global display pixels. With this patch, the plugin stays in its proper place within the page.
Attachment #692285 -
Flags: review?(roc)
| Assignee | ||
Updated•13 years ago
|
Assignee: nobody → jfkthame
| Assignee | ||
Comment 3•13 years ago
|
||
Tryserver build is available at http://ftp-scl3.mozilla.com/pub/mozilla.org/firefox/try-builds/jkew@mozilla.com-f05922d64299/try-win32/.
| Reporter | ||
Comment 4•13 years ago
|
||
(In reply to Jonathan Kew (:jfkthame) from comment #3)
> Tryserver build is available at
> http://ftp-scl3.mozilla.com/pub/mozilla.org/firefox/try-builds/jkew@mozilla.
> com-f05922d64299/try-win32/.
I can confirm it works. :)
Attachment #692285 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 5•13 years ago
|
||
Target Milestone: --- → mozilla20
Comment 6•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•