bug 821454 - scaling from display to device pixels should only apply to top-level windows/dialogs/popups, not to child or plugin windows. r=roc